  ServerInfo and DefaultServerInfo made inner classes of Server and AbstractServer respectively, Conjunction, User and Version moved back to common.model, for backwards compatability
  ScenarioException made inner class of LoadTest
  Value and Values moved to org.jminor.common
  SerializeException made inner class of Serializer
  TaskScheduler moved to org.jminor.common.model.tools
0.10.3
  Framework modules renamed for consistency
  AbstractServer.DefaultLoginProxy and DefaultConnectionValidator inner classes added
  AbstractServer, IllegalArgumentException replaced with IllegalStateException in a couple of places
  AbstractServer, bug fixed, added user authentication when retrieving an existing connection
  Database.Type enum introduced
  Sonar run
  Build file refactoring, publish split into install and deploy, local m2 repository added to ivysettings
  Ant build dependency management set up
  Build target dist renamed to package
  DateInputPanel.setDate() added
  EntityEditPanel, EntityUiUtil, createTextArea() minor signature changes
  EntityPanel.createEditControlPanel() added
  FilteredComboBoxModel.addSelectionListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedIndexListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedItemsListener() added along with remove
  SelectionModel.addSelectedItemListener() added along with remove
  Some ivysettings.xml improvement
  Usages of Util.rejectNullValue() and Util.equal() replaced with Objects.requireNonNull() and Objects.equals() respectively
  Util.rejectNullValue() and equal() removed
  org.jminor.common.model.Util broken up into TextUtil, PreferencesUtil and FormatUtil, rest moved to common.Util
  StateObserver.addActivateListener() and addDeactivateListener() removed
  ServerUtil.resolveTrustStoreFromClasspath() refactored
  Util.getArray/CollectionContentsAsString() moved to TextUtil
0.10.4
  Source updated to Java 8