@@ -247,7 +247,7 @@
     <subant target="package" buildpath="plugins"/>
   </target>
 
-  <target name="run_unit_tests" description="Runs unit tests for all modules">
+  <target name="run_unit_tests" depends="install" description="Runs unit tests for all modules">
     <subant target="run_unit_tests" buildpath="common"/>
     <subant target="run_unit_tests" buildpath="framework"/>
     <subant target="run_unit_tests" buildpath="swing"/>
@@ -257,7 +257,8 @@
     <subant target="run_unit_tests" buildpath="demos"/>
   </target>
 
-  <target name="deploy" depends="clear_ivy_cache" description="Publishes all project artifacts to a remote repository">
+  <target name="deploy" depends="run_unit_tests"
+          description="Publishes all project artifacts to a remote repository after running unit tests">
     <subant target="deploy" buildpath="common"/>
     <subant target="deploy" buildpath="framework"/>
     <subant target="deploy" buildpath="swing"/>
