@@ -54,10 +54,10 @@ public final class TextUtilTest {
   @Test
   public void padString() {
     final String string = "hello";
-    assertEquals("hello", TextUtil.padString(string, 4, '*', true));
-    assertEquals("hello", TextUtil.padString(string, 5, '*', true));
-    assertEquals("***hello", TextUtil.padString(string, 8, '*', true));
-    assertEquals("hello***", TextUtil.padString(string, 8, '*', false));
+    assertEquals("hello", TextUtil.padString(string, 4, '*', TextUtil.Alignment.LEFT));
+    assertEquals("hello", TextUtil.padString(string, 5, '*', TextUtil.Alignment.LEFT));
+    assertEquals("***hello", TextUtil.padString(string, 8, '*', TextUtil.Alignment.LEFT));
+    assertEquals("hello***", TextUtil.padString(string, 8, '*', TextUtil.Alignment.RIGHT));
   }
 
   @Test
@@ -86,7 +86,7 @@ public final class TextUtilTest {
 
   @Test
   public void getDelimitedString() {
-    final String result = "test\ttest2" + Util.LINE_SEPARATOR + "data1\tdata2" + Util.LINE_SEPARATOR + "data3\tdata4" + Util.LINE_SEPARATOR;
+    final String result = "test\ttest2" + Util.LINE_SEPARATOR + "data1\tdata2" + Util.LINE_SEPARATOR + "data3\tdata4";
     assertEquals(result, TextUtil.getDelimitedString(new String[][]{new String[]{"test", "test2"}},
             new String[][]{new String[]{"data1", "data2"}, new String[]{"data3", "data4"}}, "\t"));
   }
